--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^4.2.4"
@@ -40,6 +41,7 @@
     "@axe-core/react": "^4.10.1",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
+    "concurrently": "^9.1.2",
     "jest": "^27.5.1"
   }
 }
